test/kubectl/microservice/details.yaml
apiVersion: v1
kind: Pod
metadata:
  name: details-v1
  namespace: default
  labels:
    app: details
spec:
  containers:
    - name: productpage
      image: istio/examples-bookinfo-details-v1:1.19.1
      ports:
        - containerPort: 9080
          protocol: tcp
    - name: envoy-proxy
      image: sjtuzc/envoy:1.2
      securityContext:
        runAsUser: 1337
