test/kubectl/microservice/productpage.yaml
apiVersion: v1
kind: Pod
metadata:
  name: productpage
  namespace: default
  labels:
    app: productpage
spec:
  containers:
    - name: productpage
      image: istio/examples-bookinfo-productpage-v1:1.19.1
      ports:
        - containerPort: 9080
          protocol: tcp
    - name: envoy-proxy
      image: sjtuzc/envoy:1.2
      securityContext:
        runAsUser: 1337
