test/kubectl/microservice/reviews-v3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: reviews-v3
  namespace: default
  labels:
    app: reviews
spec:
  containers:
    - name: productpage
      image: istio/examples-bookinfo-reviews-v3:1.19.1
      ports:
        - containerPort: 9080
          protocol: tcp
    - name: envoy-proxy
      image: sjtuzc/envoy:1.2
      securityContext:
        runAsUser: 1337
