test/kubectl/microservice/details-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: details
  namespace: default
spec:
  ports:
    - port: 9080
      targetPort: 9080
  selector:
    app: details
