test/kubectl/microservice/productpage-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: productpage
  namespace: default
spec:
  ports:
    - port: 9080
      targetPort: 9080
  selector:
    app: productpage
