test/kubectl/microservice/ratings-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings
  namespace: default
spec:
  ports:
    - port: 9080
      targetPort: 9080
  selector:
    app: ratings
