test/kubectl/microservice/reviews-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews
  namespace: default
spec:
  ports:
    - port: 9080
      targetPort: 9080
  selector:
    app: reviews
