test/kubectl/microservice/vs_old.yaml
apiVersion: v1
kind: VirtualService
metadata:
  name: my-vs
  namespace: default
spec:
  serviceRef: reviews
  port: 9080
  subsets:
    - name: subset-v1
      weight: 1
    - name: subset-v2
      weight: 0
